package com.lft.uml.p6_composition;

/**
 * Function: 		ADD FUNCTION.
 * Reason:   		ADD REASON.
 * Date:            2020/9/6 22:24
 * E-mail:			laifengting@foxmail.com
 * <p>
 * Class Name:      Head
 * Package Name:    com.lft.uml.p6_composition
 * @author Laifengting
 * @version 1.0.0
 * @since JDK 8
 */
public class Head {
}
